2007-08-24  Ulrich Mueller  <ulm@gentoo.org>  (tiny change)

	* files.el (backup-buffer-copy): Don't wrap delete in
	condition-case, only try to delete if file exists.

2007-08-24  Glenn Morris  <rgm@gnu.org>

	* files.el (backup-buffer-copy): Revert 2007-08-22 change.

2007-08-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/cperl-mode.el (defcustom, x-color-defined-p, cperl-is-face)
	(cperl-is-face, cperl-force-face, cperl-etags-snarf-tag, cperl-mode)
	(cperl-etags-snarf-tag, cperl-etags-goto-tag-location, cperl-init-faces)
	(cperl-etags-goto-tag-location): Use new style backquotes.

	* subr.el (complete-with-action): Backport from trunk (for vc-arch.el).
	(dynamic-completion-table): Use it it.

	* net/browse-url.el: Remove spurious * in custom docstrings.
	(browse-url-filename-alist): Use new-style backquote.

	* emacs-lisp/backquote.el (backquote-unquote-symbol)
	(backquote-splice-symbol): Clarify they're not new-style unquotes.

	* emacs-lisp/edebug.el (edebug-list-form, edebug-match-symbol, \,)
	(\,@): Backslash the , and ,@ which are not new-style unquotes.

	* textmodes/texinfmt.el (\,): Clarify it's not a new-style unquote.

	* net/socks.el (socks-username/password-auth-filter):
	Remove unused vars `state' and `desired-len'.
	(socks-parse-services, socks-nslookup-host): Use with-current-buffer.
	(socks-wait-for-state-change): Use new-style backquotes.

	* pcvs.el (cvs-mode-status): Fix long-standing typo.

	* emacs-lisp/bytecomp.el (byte-compile-from-buffer): Check old-style
	backquotes after each `read' rather than once per buffer.

	* dframe.el: Remove spurious * in custom docstrings.
	(dframe-xemacsp): Remove, use (featurep 'xemacs) instead.
	(dframe-xemacs20p): Remove, inline at the sole use point.
	(defface): Don't defvar the face, don't use old-style backquote.
	(defcustom): Don't use old-style backquote.
	(dframe-frame-parameter, dframe-mouse-event-p):
	Make it obvious that it's always defined.